# simple-example

./: .gitignore  README.md  pyproject.toml
simple_example/: __init__.py  arithmatic.py  calculator.py
simple_example/entrypoints/: startup.py
tests/: test_arithmatic.py
