[tool.poetry]
name = "simple-example"
version = "0.1.0"
description = "A simple example"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
simple-calculator = "simple_example.entrypoints.startup:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
mypy = "^0.812"
autopep8 = "^1.5.6"
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
